load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "pathplannerlib-cpp",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "shared",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibNewCommands:shared",
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:shared",
        "@bzlmodrio-pathplannerlib//private/cpp/PathplannerLib-cpp:shared",
    ],
)
